[package]
name = "bb8-surrealdb"
version = "0.1.2"
edition = "2021"
description = "SurrealDB driver for bb8 based on the surrealdb crate"
authors = ["Blake Nedved <blakeanedved@gmail.com>"]
repository = "https://github.com/blakeanedved/bb8-surrealdb"
license = "MIT"
keywords = ["bb8", "surrealdb", "pool"]
categories = ["database"]

[features]
tikv = ["surrealdb/kv-tikv"]

[dependencies]
bb8 = "0.8"
async-trait = "0.1"
surrealdb = "1.0.0-beta.8"